--- a/dockerfile.txt
+++ b/dockerfile.txt
@@ -3,7 +3,7 @@
 FROM nginx:latest
 
 # Adding custom index.html hosted on Github Gist
-ADD https://github.com/girishkannan/Dockerfile-Nginx-.git /usr/share/nginx/html/
+ADD https://raw.githubusercontent.com/girishkannan/Dockerfile-Nginx-/master/index.html /usr/share/nginx/html/
 
 # Adding read permissions to custom index.html
 RUN chmod +r /usr/share/nginx/html/index.html
